# qft-ntrunc

./: pyproject.toml  validation.ipynb
notebooks/: schwinger.ipynb
qft_ntrunc/: paulis.py  schwinger.py  utils.py
qft_ntrunc/staggered_fermion_1d/: common.py  fermion.py  schwinger.py  sparse.py  staggered_fermion.py
qt4hep/: schwinger.py
scripts/: integrate.py
